--- a/.github/workflows/vishwa_codm-xtrasauc.yml
+++ b/.github/workflows/vishwa_codm-xtrasauc.yml
@@ -68,5 +68,5 @@ jobs:
         with:
           app-name: 'CODM-XtraSauc'
           slot-name: 'Production'
-          package: .
+          package: ./build
           
